--- a/css/articles.css
+++ b/css/articles.css
@@ -1,7 +1,7 @@
 @import "shared.css";
 
 h1, h2, h3 {
-  font-weight: 400;
+  font-weight: var(--font-weight-medium);
   margin: 0;
 }
 
@@ -196,6 +196,10 @@ hr {
   margin-top: 2em;
   margin-bottom: 2em;
   width: 50%;
+}
+
+em {
+  font-weight: var(--font-weight-bold);
 }
 
 .footnote-body {
